Fix the cors now, what am I doing, how is this even works ?